--- a/gb/18/9/17/n10720849.md
+++ b/gb/18/9/17/n10720849.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ej2940/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ej2940/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ej2940/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ej2940/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ej2940/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ej2940/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ej2940/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ej2940/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ej2940/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ej2940/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ej2940/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>女儿被骗为“证人” 残疾妈妈遭冤判8年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/2-19.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2018年10月07日讯】武汉残疾妇女<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E7%A5%9D%E4%BA%9A.md#1">祝亚</a>，被蹲坑的警察绑架后，被非法庭审，后遭冤判8年。她的女儿意想不到地成了妈妈“违法”的“证人”。</p>
-<p>被警察打聋的八旬老人<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E9%83%91%E5%BE%B7%E8%B4%A2.md#1">郑德财</a>被庄河市法院冤判1年半，家人向监狱强烈要求，才见到坐轮椅出来的他。</p>
-<p>广东茂名市<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E4%BA%BA.md#1">残疾人</a><ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E6%9F%AF%E9%83%91%E5%9F%BA.md#1">柯郑基</a>，被冤判6年，至今仍被关在监狱里，生命垂危。</p>
+	<p>【大纪元2018年10月07日讯】武汉残疾妇女<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%9D%E4%BA%9A.md#1">祝亚</a>，被蹲坑的警察绑架后，被非法庭审，后遭冤判8年。她的女儿意想不到地成了妈妈“违法”的“证人”。</p>
+<p>被警察打聋的八旬老人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%83%91%E5%BE%B7%E8%B4%A2.md#1">郑德财</a>被庄河市法院冤判1年半，家人向监狱强烈要求，才见到坐轮椅出来的他。</p>
+<p>广东茂名市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E4%BA%BA.md#1">残疾人</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9F%AF%E9%83%91%E5%9F%BA.md#1">柯郑基</a>，被冤判6年，至今仍被关在监狱里，生命垂危。</p>
 <p>他们通过修炼法轮功，身心受益；因为坚持信仰，却被中共惨无人道地迫害。</p>
-<p><ahref="https://github.com/ej2940/djy/blob/master/gb/18/9/14/n10714336.md#1">接上文</a></p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/18/9/14/n10714336.md#1">接上文</a></p>
 <h2>妈妈遭冤判8年 女儿悲痛欲绝</h2>
-<p><ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E7%A5%9D%E4%BA%9A.md#1">祝亚</a>，54岁，住在武汉市黄陂区前川街，丈夫早逝，与女儿相依为命。修炼法轮功前，她的左腿残疾，要靠左手撑着才能往前迈，而且曾拉血尿、血块。修炼后，她曾萎缩的腿长粗了，明显的好了，已坏死的肾也好了。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%9D%E4%BA%9A.md#1">祝亚</a>，54岁，住在武汉市黄陂区前川街，丈夫早逝，与女儿相依为命。修炼法轮功前，她的左腿残疾，要靠左手撑着才能往前迈，而且曾拉血尿、血块。修炼后，她曾萎缩的腿长粗了，明显的好了，已坏死的肾也好了。</p>
 <p>2017年4月25日早上7点半左右，祝亚去买菜时，被楼下蹲坑的便衣警察拦截。警察逼她交出钥匙，然后闯进她的家中非法抄家，东翻西找了3个小时后，抢走了两台电脑、多台打印机等。</p>
 <p>当天晚上，祝亚被劫持到武汉市东西湖额头湾第一看守所重刑犯监室；5月9日，遭黄陂区公安分局非法批捕，被转到普通监室。</p>
 <p>2018年6月15日，祝亚被湖北省武汉市黄陂区法院非法庭审。开庭那天，法院门口停了两辆巡逻警车；车上、车旁边布满警察；车顶上架着仪器的闪灯警车在监视法庭周围的一切，直到庭审结束。</p>
@@ -27,14 +27,14 @@
 <p>没有开庭，在律师和家人不知道的情况下，祝亚的上诉被武汉中级法院草草驳回、非法维持冤判。</p>
 <p>祝亚已于2018年9月12日被移送到武汉市女子监狱。</p>
 <h2>八旬老人身陷囹圄 受迫害患重病</h2>
-<p><ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E9%83%91%E5%BE%B7%E8%B4%A2.md#1">郑德财</a>，家住大连市庄河市光明山镇小营村。2017年9月4日，八旬的他在庄河光明山镇讲法轮功真相，被光明山派出所警察绑架；晚7点，被劫持至看守所。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%83%91%E5%BE%B7%E8%B4%A2.md#1">郑德财</a>，家住大连市庄河市光明山镇小营村。2017年9月4日，八旬的他在庄河光明山镇讲法轮功真相，被光明山派出所警察绑架；晚7点，被劫持至看守所。</p>
 <p>9月15日，老人被非法批捕，家属拒绝签字。老人被非法关在看守所37天后，身体出现不适，“取保候审”回家。</p>
 <p>2018年3月9日，检察院人员到家中了解情况，说回去再研究。3月14日，当地法院打电话给郑德财的家人，叫郑德财到法院去。</p>
 <p>4月12日上午，庄河市法院对郑德财进行非法庭审。</p>
 <p>直到6月11日，家属才接到通知，让到庄河看守所拿衣服。家属这时才得知，郑德财被庄河市法院冤判1年半；次日，他被送往南关岭新入监监狱。他出现高血压、心跳过速、咳嗽血等症状。</p>
-<p>郑德财在2000年进京为法轮功鸣冤时，被警察当场打聋（有大连市<ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E4%BA%BA.md#1">残疾人</a>证）。</p>
+<p>郑德财在2000年进京为法轮功鸣冤时，被警察当场打聋（有大连市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AE%8B%E7%96%BE%E4%BA%BA.md#1">残疾人</a>证）。</p>
 <p>2001年大年初二，郑德财再遭绑架；同年7月，被秘密非法判刑3年半，被非法关押在大连监狱，曾被迫害致心脏病发作、血压200多，被送大连春柳中心医院。在病床上，他还被强铐着手铐脚镣。</p>
-<h2><ahref="https://github.com/ej2940/djy/blob/master/gb/tag/%E6%9F%AF%E9%83%91%E5%9F%BA.md#1">柯郑基</a>被迫害致生命垂危</h2>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9F%AF%E9%83%91%E5%9F%BA.md#1">柯郑基</a>被迫害致生命垂危</h2>
 <p>修炼法轮功前，柯郑基的腰、颈关节钙化活动功能丧失，全身骨痛，膝关节游走性刺痛等，只得办理病残、病退在家休养。</p>
 <p>1997年3月，他开始修炼法轮功，很快多年的疼痛消失。十几年来，他都不用打针服药，减轻了家庭经济负担，也为单位节约了不少医药费用。在工作上，他也很尽心尽力，家庭幸福美满。</p>
 <p>柯郑基因坚持信仰，被非法关押在化州洗脑班迫害；因身体病残找不到工作，就回到乡下，以种果树维生。</p>
@@ -83,36 +83,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/16/12/24/n8627771.md#1">破世界纪录的残运会冠军控告江泽民</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/17/10/27/n9775840.md#1">千百度：中共特警为何绑架炼法轮功的残疾农妇？</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/18/1/15/n10059209.md#1">觅真：谎言下掩盖着多少冤案？</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/18/3/30/n10262321.md#1">杜鹏程：公安不会顾忌“老弱病残”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/24/n8627771.md#1">破世界纪录的残运会冠军控告江泽民</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/27/n9775840.md#1">千百度：中共特警为何绑架炼法轮功的残疾农妇？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/15/n10059209.md#1">觅真：谎言下掩盖着多少冤案？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/30/n10262321.md#1">杜鹏程：公安不会顾忌“老弱病残”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/ej2940/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017675.md#1">中共内外交困 前人大教授：王沪宁把习吹晕了</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017276.md#1">塞尔维亚总统吻五星旗后 儿子确诊患肺炎</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12018161.md#1">川普问“哪来的” 上海党媒记者称“来自台湾”</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/10/n12018467.md#1">【拍案惊奇】北京连发地震是人为？山东罕见雪</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12018357.md#1">美国娱乐圈遭重创 一周内九位明星染疫过世</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/9/n12016763.md#1">李明依罹甲状腺癌 动刀切除恶性肿瘤</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12014647.md#1">两次抗癌成功 美老牌歌星普莱染中共肺炎身亡</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/8/n12014127.md#1">工匠未见过佛 如何能雕刻出佛之庄严宝像</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
-<li><a href="https://github.com/ej2940/djy/blob/master/gb/20/4/7/n12011418.md#1">【历史上的瘟疫】夺走两位君王性命的大瘟疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ej2940/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ej2940/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/17/n10720849.htm">女儿被骗为“证人” 残疾妈妈遭冤判8年</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/17/n10720849.htm">女儿被骗为“证人” 残疾妈妈遭冤判8年</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ej2940/djy/blob/master/gb/18/9/17/n10720849.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ej2940/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ej2940/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ej2940/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ej2940/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ej2940/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/9/17/n10720849.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
