--- a/gb/19/3/5/n11090771.md
+++ b/gb/19/3/5/n11090771.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/drjlsn3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2018年 辽宁省法轮功学员遭迫害综述</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/2019-3-4-mh-liaoning-persecution-1-600x400.png" />
 <h6>2018年辽宁地区法轮功学员遭中共各类迫害人次统计图。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2019年03月05日讯】2018年度，<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81.md#1">辽宁</a>省对法轮功学员的迫害依然较严重。据不完全统计，辽宁省14个地区663人遭受了不同程度的迫害。其中，被<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">迫害致死</a>的有23人、非法判刑131人、非法庭审29人、非法批捕37人、非法拘留176人、绑架164人、骚扰108人。</p>
-<p>明慧网报导，2018年遭受绑架现、已回家的法轮功学员有184人，被通过抄家、抢劫、诬判而勒索现金的总额至少有54.8万元。参与迫害者中有31人<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>，其中9人丧命。</p>
+	<p>【大纪元2019年03月05日讯】2018年度，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81.md#1">辽宁</a>省对法轮功学员的迫害依然较严重。据不完全统计，辽宁省14个地区663人遭受了不同程度的迫害。其中，被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">迫害致死</a>的有23人、非法判刑131人、非法庭审29人、非法批捕37人、非法拘留176人、绑架164人、骚扰108人。</p>
+<p>明慧网报导，2018年遭受绑架现、已回家的法轮功学员有184人，被通过抄家、抢劫、诬判而勒索现金的总额至少有54.8万元。参与迫害者中有31人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>，其中9人丧命。</p>
 <p>遭受迫害最严重的地区依次是大连、沈阳、抚顺、朝阳、锦州。这五个地区的法轮功学员被迫害的人数都在50人次以上，占全省被迫害总人次的65% 。</p>
-<h2><ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">迫害致死</a></h2>
-<p>2018年度，<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81.md#1">辽宁</a>地区法轮功学员被迫害致死的有23人，被监狱迫害致死的有17人，其中辽宁女子监狱7人、大连监狱4人；被劳教致死4人、在看守所（洗脑班）被迫害致死2人。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">迫害致死</a></h2>
+<p>2018年度，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BE%BD%E5%AE%81.md#1">辽宁</a>地区法轮功学员被迫害致死的有23人，被监狱迫害致死的有17人，其中辽宁女子监狱7人、大连监狱4人；被劳教致死4人、在看守所（洗脑班）被迫害致死2人。</p>
 <p>辽宁女子监狱迫害致死法轮功学员最多，三年增加了14人，平均每年迫害致死近5人；其次是本溪监狱，三年增加了5人，平均每年迫害致死接近2人。</p>
 <p>23位被迫害致死的法轮功学员为：</p>
 <p>孙敏（女，50岁）、王世贤（男，70岁）、吕彦坤（男，59岁）、靳军波（男，56岁）、刘金玉（女，67岁）、王恩昌（男，82岁）、周传业（男，74岁）、冷冬梅（女，49岁）、胡国舰（男）、吴业凤（女，55岁）、李德成（男，72岁）、王兰芝（女，55岁）、杨韶华（女，56岁）、林维珠（男，66岁）、金顺女（女，66岁）、邱淑芹（女，64岁）、唐国华（男）、奚常海（男，68岁）、李捷春（男，62岁）、陈存利（男，68岁）、高素娟（女，64岁）、吴国凤（女，73岁）、吴博（男，40岁）</p>
@@ -28,7 +28,7 @@
 <p>2016年5月4日，他被劫持到本溪监狱，遭到暴力殴打、虐待；在春寒料峭时，被用冷水浇头、浇全身；头部遭脚踢，造成脑血管破裂，脑干出血，被送到本溪市中心医院，做开颅手术后，头盖骨缺失，颅骨塌陷。</p>
 <p>做完手术22天后，他被迫害成植物人，于2018年5月15日凌晨含冤离世。</p>
 <h2>非法判刑</h2>
-<p>2018年辽宁省有130名法轮功学员遭非法判刑，人数仍居全国首位，并且多次出现大规模绑架事件，群体遭诬判；老年法轮功学员遭<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E5%86%A4%E5%88%A4.md#1">冤判</a>数量有增无减。见下面两例：</p>
+<p>2018年辽宁省有130名法轮功学员遭非法判刑，人数仍居全国首位，并且多次出现大规模绑架事件，群体遭诬判；老年法轮功学员遭<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%86%A4%E5%88%A4.md#1">冤判</a>数量有增无减。见下面两例：</p>
 <h3><b>大连经济开发区绑架、诬判案</b></h3>
 <p>2017年10月8日，大连公安局国保支队，伙同大连开发区公安分局属下五彩城派出所、湾里派出所、黄海路派出所、海青派出所、董家沟派出所等，出动数十个警察，以拦路绑架、抢劫、入室抢劫的方式，同时在不同地点实施多起绑架案。</p>
 <p>有个警察炫耀称，当天共绑架了19名法轮功学员。其中，开发区某日资企业翻译贾秀春，是在吉林敦化出差时被大连国保跟踪、绑架。</p>
@@ -39,7 +39,7 @@
 <h3><b>9名老年法轮功学员遭诬判</b></h3>
 <p>中共公、检、法部门对法轮功学员的迫害达到丧心病狂的程度，连老年人也不放过。2018年，辽宁地区就有9名老年法轮功学员被非法判刑，其中80岁以上的有3人，70～79岁的4人，65～69岁的2人。</p>
 <h2><b>31人参与迫害法轮功 厄运缠身</b></h2>
-<p>据明慧网2019年2月9日刊登的题为“迫害法轮功19年间逾两万人遭恶报”一文，辽宁地区<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>的案例居全国第三位，遭厄运的人数为2,202人，其中政法委、“610”、公检法遭厄运的人数为1,028人，超过50%；公安系统遭厄运的人数为600，是最大的群体。</p>
+<p>据明慧网2019年2月9日刊登的题为“迫害法轮功19年间逾两万人遭恶报”一文，辽宁地区<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%81%AD%E5%8E%84%E8%BF%90.md#1">遭厄运</a>的案例居全国第三位，遭厄运的人数为2,202人，其中政法委、“610”、公检法遭厄运的人数为1,028人，超过50%；公安系统遭厄运的人数为600，是最大的群体。</p>
 <p>2018年，“追查国际”对辽宁地区参与迫害法轮功学员的责任人，发出追查通告54个，涉嫌犯罪责任人1,110名，责任单位207个。</p>
 <p>见以下具体案例：</p>
 <h3><b>辽宁省政法委书记丁世发呈植物人状态</b></h3>
@@ -101,42 +101,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/13/n10908623.md#1">2018年 至少68位法轮功学员被迫害致死</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/2/7/n11030794.md#1">过年间 大连130余法轮功学员被非法关押</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/2/8/n11032348.md#1">中国新年间 桂皖辽3公安所长、副所长暴毙</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/2/17/n11051545.md#1">落马的绥中法院庭长关树森 冤判数十案例</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/13/n10908623.md#1">2018年 至少68位法轮功学员被迫害致死</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/7/n11030794.md#1">过年间 大连130余法轮功学员被非法关押</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/8/n11032348.md#1">中国新年间 桂皖辽3公安所长、副所长暴毙</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/17/n11051545.md#1">落马的绥中法院庭长关树森 冤判数十案例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/28/n12581416.md#1">转世记忆58年历历在目 和尚说今生福报因果</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12619912.md#1">【微视频】美情报总监交大选报告 大事决断时？</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12620804.md#1">【横河直播】选举人团投票 密西根投票机错68%</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12620753.md#1">【远见快评】多米尼秘密泄露 北京瑞银大换血？</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616298.md#1">【十字路口】最高院为何拒绝 川普还有王牌吗</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616255.md#1">川普到西点军校看球赛 欢迎声“山呼海啸”</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616453.md#1">全球策略联盟主席：拜登不会当选 神主宰一切</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617843.md#1">做核酸检测视频疯传 江疏影一句回应登热搜</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617711.md#1">演员不背台词只靠提词板 章子怡直呼搭戏痛苦</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12620919.md#1">毛晓彤出生时被弃垃圾桶 成名后遭父索赡养费</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/12/n12615453.md#1">SJ于2020 TMA摘四奖唱新歌 BTS连三年获大奖</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616518.md#1">SJ作客《认识的哥哥》 自揭成员过往大吵内幕</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616588.md#1">皮夹在台弄丢很快取回 外国人：台湾万岁！</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616814.md#1">世界上最寒冷的学校 -51°C也要上课</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618609.md#1">真实报导美国大选 大纪元让网民刮目相看</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618931.md#1">刻有川普大楼座标 神秘金属柱子在澳洲出现</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12606924.md#1">【直播】肺最怕的病！这样保养肺老了爬山也不喘</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/5/n11090771.htm">2018年 辽宁省法轮功学员遭迫害综述</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/5/n11090771.htm">2018年 辽宁省法轮功学员遭迫害综述</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/drjlsn3260/djy/blob/master/gb/19/3/5/n11090771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/3/5/n11090771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
